# crafter-cli

./: .gitignore  README.md  codex.md  crafter.sh  install.sh  pyproject.toml
crafter/: __init__.py  cli.py  doctor.py  project.py  scaffold.py
crafter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
crafter/agent/: __init__.py  loader.py  loop.py  tools.py
crafter/core/: __init__.py  ascii.py  config.py  output.py  progress.py  styles.py  terminal.py
crafter/evaluator/: __init__.py  diagnostics.py  evaluator.py  normalizer.py  runner.py
crafter/stages/: __init__.py  definitions.py
test-crafter/: crafter.yml
