[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crafter-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["typer>=0.12"]

[project.scripts]
crafter = "crafter.cli:main"

[tool.setuptools.packages.find]
include = ["crafter*"]
